@@ -49,67 +49,82 @@
             <div class="dataPreBox">
             	<div class="dataPre_leftCol">
                 	<ul id="menuSec" class="slidingmenu">
-                        <li><a href="#">ATLAS Organization</a>
+                        <li><a href="http://indico.cern.ch/categoryDisplay.py?categId=1407">Operation Meetings</a>
+                        <li><a href="#">Operation Schedule</a>
                             <ul class="subLeftNav">
-                                <li><a href="#">Organigram</a></li>
-                                <li><a href="#">Management</a></li>
-                                <li><a href="#">Executive Board</a></li>
-                                <li><a href="#">Collaboration Board</a></li>
-                                <li><a href="#">Institutions</a> </li>
-                                <li><a href="#">Publications Committee </a>	</li>
-                                <li><a href="#">Authorship Committee </a></li>
-                                <li><a href="#">Speakers Committee </a></li>
-                                <li><a href="#">Policy Documents</a></li>
-                                <li><a href="#" class="last-child">ATLAS Appointments DB</a></li>
+								<li><a href="https://atlasop.cern.ch/atlas-point1/twiki/bin/view/Main/RunningSchedules">Run Schedule</a></li>
+								<li><a href="http://indico.cern.ch/categoryDisplay.py?categId=1419">Intervention Schedule</a></li>
+								<li><a href="http://indico.cern.ch/categoryDisplay.py?categId=1428">Run Meetings</a></li>
+								<li class="last-child"><a href="https://edms.cern.ch/cedar/plsql/navigation.tree?p_top_id=1069988858&p_top_type=P&p_open_id=1916187939&p_open_type=P">Operation Documents in EDMS</a></li>
                             </ul>
                         </li>
-                        <li><a  href="#">General Information</a>
+					    <li><a href="https://atlasop.cern.ch/atlas-point1/ATLAS_Logbook.htm">E-Logbook</a></li>
+                        <li><a href="#">Shifts</a>
                             <ul class="subLeftNav">
-                                <li><a href="#">Secretariat</a></li>
-                                <li><a href="#">Registration & Access</a></li>
-                                <li><a href="#">Authorship Qualification</a></li>
-                                <li><a href="#">Visa Requirements for Visitors</a></li>
-                                <li><a href="#">Housing & Useful links</a></li>
-                                <li><a href="#">Forms & Services</a>
-                                    <div class="sub_subLeftNav">
-                                        <p><a href="#">Mailing list</a></p>
-                                        <p><a href="#">Notes</a></p>
-                                        <p><a href="#">Theses</a></p>
-                                        <p><a href="#">Dictionary</a></p>
+								<li><a href="https://pptevm.cern.ch/mao/client/cern.ppt.mao.app.gwt.MaoClient/MaoClient.html#home">Shift Booking (OTP)</a></li>
+								<li><a href="https://atlasop.cern.ch/atlas-point1/shift.html">Shift Booking Rules</a></li>
+								<li class="last-child"><a href="http://pptevm-public.cern.ch/mao/public/PhoneList.html">Today's Shift Schedule</a></li>
+                            </ul>
+                        </li>
+						<li><a href="http://atlas-service-runinformation.web.cern.ch/atlas-service-runinformation/">Run Summaries</a></li>
+						<li><a href="https://atlasop.cern.ch/atlas-point1/status/Phone.htm">On Call Phones</a></li>
+						<li><a href="https://edms.cern.ch/document/817670">Piquet Services</a></li>
+						<li><a href="https://edms.cern.ch/file/1020308/1/atc-e-mg-0012.pdf">ATLAS-LHC Meetings</a></li>
+						<li><a href="http://atlas.web.cern.ch/Atlas/TCOORD/Activities/TcOffice/Scheduling/Installation/Point1_visits.html">Visits to Point 1</a></li>
+						<li><a href="http://atlas.web.cern.ch/Atlas/TCOORD/Activities/TcOffice/Safety/Work.htm">Working at Point 1</a></li>
+						<li><a href="http://atlas.web.cern.ch/Atlas/TCOORD/Activities/TcOffice/Safety/index.htm">Safety in ATLAS</a></li>                        
+                        <li><a href="#">Services &amp; Tools</a>
+                            <ul class="subLeftNav">
+	                        	<li><a href="#">Services</a>
+                                	<div class="sub_subLeftNav">
+                                		<p><a href="http://edh.cern.ch/">EDH</a></p>
+										<p><a href="http://cds.cern.ch/">CDS</a></p>
+                               			<p><a href="http://indico.cern.ch/">Indico</a></p>
+                               			<p><a href="https://edms.cern.ch/cedar/plsql/edmsatlas.home">EDMS</a></p>
+										<p><a href="http://atglance.web.cern.ch/atglance/ATLASTCnDB/">Glance</a></p>
+										<p><a href="http://www.cern.ch/dmu-atlas">CATIA</a></p>
+                            			<p><a href="http://atlas.web.cern.ch/Atlas/TCOORD/Activities/Installation/Database/rack.htm">Rack</a></p>
+                            			<p><a href="https://atlasop.cern.ch/atlas-point1/ATLAS_TWiki.html">Twiki</a></p>
                                     </div>                                                                     
-                                </li>
-                                <li><a href="#">Visits to point 1</a></li>
-                                <li><a href="#">Safety</a></li>
-                                <li ><a href="#" class="last-child">Jobs vacancies</a></li>
+                                </li>                            		
+	                        	<li><a href="#">Tools</a>
+                                	<div class="sub_subLeftNav">
+                                		<p><a href="http://atlas-authdb.web.cern.ch/atlas-authdb/autoout/atlas_webdir.html">ATLAS Directory</a></p>
+										<p><a href="https://espace.cern.ch/atlas-collaborative-tools/default.aspx">Collaborative Tools</a></p>
+										<p><a href="http://graybook.cern.ch/ExperimentSearch.html">LHC Member Search</a></p>
+                                    </div>                                                                     
+                                </li>                            		
                             </ul>
                         </li>
-                        <li><a href="#">Documentation & Links</a>
+                        <li><a href="#">Documentation</a>
                             <ul class="subLeftNav">
-                                <li><a href="#">M&O share list</a></li>
-                                <li><a href="#">Mailing List</a></li>
-                                <li><a href="#">Notes (CDS)</a></li>
-                                <li><a href="#">Proposal & TDR</a></li>
-                                <li><a href="#">Theses</a></li>
-                                <li><a href="#">Women Group</a></li>
-                                <li><a href="#">Juniors Seminars</a> </li>
-                                <li><a href="#">arXiv</a></li>
-                                <li><a href="#">SLAC Spires</a></li>
-                                <li><a href="#">Review of Particle Physics</a></li>
-                                <li><a href="#">Fundamental Physical Constants</a></li>
-                                <li><a href="#" class="last-child">Dictionary</a></li>
-                            </ul>
+								<li><a href="https://atlasop.cern.ch/atlas-point1/slimos/doc/default.htm">Slimos</a></li>
+								<li><a href="https://atlasop.cern.ch/atlas-point1/twiki/bin/view/Main/LArOperationManualShifter">LAr</a></li>
+								<li class="last-child" ><a href="https://atlasop.cern.ch/atlas-point1/twiki/bin/view/Main/TileCalorimeterWhiteBoard">Tile</a></li>
+							</ul>
                         </li>
-                        <li class="last-child"><a class="#">ATLAS e-News</a></li>
+                        <li><a href="#">Links</a>
+							<ul class="subLeftNav">
+								<li><a href="https://atlasop.cern.ch/atlas-point1/ATLASview/ACR.htm">ATLAS Control Room</a></li>
+								<li><a href="http://atlaseye-webpub.web.cern.ch/atlaseye-webpub/web-sites/pages/UX15_webcams.htm">ATLAS Cavern</a></li>
+								<li><a href="http://atglance.home.cern.ch/atglance/cgi-bin/listInterfaces">Glance</a></li>
+								<li><a href="broken link">SysAdmin FAQ</a></li>
+								<li><a href="http://atlas-tdaq-sysadmin.web.cern.ch/atlas-tdaq-sysadmin/public/">SysAdmin</a></li>
+								<li class="last-child" ><a href="http://acr.web.cern.ch/acr/safe_keys.pdf">Emergency Access Keys</a></li>
+							</ul>
+                        </li>
+                        <li class="last-child"><a class="https://atlasop.cern.ch/atlas-point1/operation-old.php">Old Operation Page</a></li>
                     </ul>
                 </div><!--end dataPre_leftCol-->
                 
                 <div class="dataPre_rightCol">
                 	<div class="largeGeneralNews1">
-                    	<h3>General news</h3>
-                        <div class="subBox">
+                    	<h3>Run Program</h3>
+                        <div class="subBoxOpen">
                         	<div class="datapreInside">
-                                <h6>ATLAS Week ongoing in Barcelona</h6>  
-                                <p class="txtLeft"><img src="images/picture1.gif" alt="#" class="floatright">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum.</p>
+                                <!-- <h6>Program of the Day</h6> -->
+                                <iframe src="https://atlasop.cern.ch/atlas-point1/wmi/current/Run Status_wmi/AtlasRunCom.html" width="100%" 
+height="200"></iframe>
                             </div>
                         </div>
                         
